--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         
             <article id="spec">
                 <h2>Технічні характеристики</h2>
-                <h4 id = "M1">Двигун EJ22</h4>
-                <p >Двигун був не просто стандартним 2-літровим, розточеним до 2,2-літра, EJ22 був побудований на основі блоку окремого лиття. На додаток до двигуна EJ22, 22B міг похвалитися зварними швами кузова (за технологією автомобілів WRC), спеціальною головною передачею, дводисковим гоночним зчепленням, посиленими приводними та карданним валом, регульованим переднім та заднім диференціалом і посиленими гальмами. У підвісці використовувалися унікальні ковані алюмінієві важелі та тяги, спортивні перевернуті амортизатори Bilstein і пружини Eibach та 17-дюймові диски BBS золотистого кольору.</p>
+                <h3 id = "M1">Двигун EJ22</h3>
+                <p ><img src="images.jpg" align = "left">Двигун був не просто стандартним 2-літровим, розточеним до 2,2-літра, EJ22 був побудований на основі блоку окремого лиття. На додаток до двигуна EJ22, 22B міг похвалитися зварними швами кузова (за технологією автомобілів WRC), спеціальною головною передачею, дводисковим гоночним зчепленням, посиленими приводними та карданним валом, регульованим переднім та заднім диференціалом і посиленими гальмами. У підвісці використовувалися унікальні ковані алюмінієві важелі та тяги, спортивні перевернуті амортизатори Bilstein і пружини Eibach та 17-дюймові диски BBS золотистого кольору.</p>
                 <table width = 80% cellspacing = "0" cellpading = "5" border="2" align="center">
                     <tr>
                         <th colspan="2">Технічні характеристики</th>
