--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                         <td align="center">Розгін від 0 до 100</td>
                         <td align="center">5.3 секунди</td>
                     </tr>
+                    <tr>
+                        <td align="center">об’єм двигуна</td>
+                        <td align = "center">2192 см3</td>
+                    </tr>
                 </table>
                 <p>По своїй суті Subaru 22B є модифікована Subaru Impreza WRX STi. Сама Impreza не мала кузову купе та якшо порівнювати ці два автомобіля в керованості, то 22B має на голову кращі ходові характеристики ніж 'цивільна' версія цього автомобілю</p>
                 <h2>Джентельменська угода</h2>
