--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head >
+        <meta charset="utf-8">
+        <style>
+            p{ text-indent: 20px;}
+            td{text-align: center}
+            a{text-decoration: 0 ; color: coral;}
+            tr{background-color: darkkhaki; border-color: grey;}
+        </style>
         <title>
            Subaru 22B 
         </title>
@@ -14,42 +21,43 @@
         <section>
             <article id="history">
                 <h2>Походження назви та історія</h2>
-                <p ><img src="1 Subaru Impreza STi.jpg" style="width: 60%;" align = "left" hspace="10" vspace="5" border = "2">версії 22B походить від назви генерального спонсора гоночної команди Subaru World Rally Team на той час - табачного бренда State Express 555.   П'ятсот п'ятдесят п'ять - це 22B у шістнадцятковій системі числення, яка використовується в комп'ютерному програмуванні. У той час світ ІТ переживав бум, і Impreza була культовою машиною для успішних ІТ-спеціалістів як у Великобританії, так і в Японії. Часом назву 22В трактують як об’єм двигуна, який було збільшено з 2 до 2,2 л, а хтось вважає, що B в назві означає Bilstein, постачальника амортизаторів. Але хто б як не трактував назву версії,  Subaru створили справді фантастичну машину.</p>
+                <p ><img src="1 Subaru Impreza STi.jpg" style="width: 50%;" align = "left" hspace="10" vspace="5" border = "2">версії 22B походить від назви генерального спонсора гоночної команди Subaru World Rally Team на той час - табачного бренда State Express 555.   П'ятсот п'ятдесят п'ять - це 22B у шістнадцятковій системі числення, яка використовується в комп'ютерному програмуванні. У той час світ ІТ переживав бум, і Impreza була культовою машиною для успішних ІТ-спеціалістів як у Великобританії, так і в Японії. Часом назву 22В трактують як об’єм двигуна, який було збільшено з 2 до 2,2 л, а хтось вважає, що B в назві означає Bilstein, постачальника амортизаторів. Але хто б як не трактував назву версії,  Subaru створили справді фантастичну машину.</p>
                 <p>Створений для святкування 40-річчя марки та для відзнаки третього поспіль титулу WRC серед виробників, STi 22B був представлений як серійна версія вже культового дводверного автомобіля Subaru World Rally Car. З широкими передніми та задніми арками, високим заднім спойлером і унікальним двигуном <a href="#M1">EJ22</a>, STi 22B був настільки наближений до ралійного автомобіля Коліна МакРея, наскільки можливо було зробити. Це була справжня дорожня репліка ралійного боліда.</p>
                 <p>Для продажу на внутрішньому ринку Японії було вироблено 399 одиниць 22B, ще 25 було виготовлено для закордонних ринків. Всі вони були продані протягом 48 годин за попередніми замовленнями. Вартість на той час була трохи менша за 40 тис фунтів стерлінгів або 25 тис доларів.</p>           
             </article>        
-        
+        </section>
+        <section>
             <article id="spec">
-                <h2>Технічні характеристики</h2>
+                <h2 >Технічні характеристики</h2>
                 <h3 id = "M1">Двигун EJ22</h3>
-                <p ><img src="images.jpg" align = "left", border = "2", style="width: 100%;">Двигун був не просто стандартним 2-літровим, розточеним до 2,2-літра, EJ22 був побудований на основі блоку окремого лиття. На додаток до двигуна EJ22, 22B міг похвалитися зварними швами кузова (за технологією автомобілів WRC), спеціальною головною передачею, дводисковим гоночним зчепленням, посиленими приводними та карданним валом, регульованим переднім та заднім диференціалом і посиленими гальмами. У підвісці використовувалися унікальні ковані алюмінієві важелі та тяги, спортивні перевернуті амортизатори Bilstein і пружини Eibach та 17-дюймові диски BBS золотистого кольору.</p>
-                <table width = 80% cellspacing = "0" cellpading = "5" border="2" align="center">
+                <p ><img src="images.jpg" align = "left", border = "2" hspace="10" vspace="5">Двигун був не просто стандартним 2-літровим, розточеним до 2,2-літра, EJ22 був побудований на основі блоку окремого лиття. На додаток до двигуна EJ22, 22B міг похвалитися зварними швами кузова (за технологією автомобілів WRC), спеціальною головною передачею, дводисковим гоночним зчепленням, посиленими приводними та карданним валом, регульованим переднім та заднім диференціалом і посиленими гальмами. У підвісці використовувалися унікальні ковані алюмінієві важелі та тяги, спортивні перевернуті амортизатори Bilstein і пружини Eibach та 17-дюймові диски BBS золотистого кольору.</p>
+                <table width = 80% cellspacing = "2" cellpading = "5" border="2" align="center" >
                     <tr>
                         <th colspan="2">Технічні характеристики</th>
                     </tr>
                     <tr>
-                        <td align="center">Потужність мотору(к.с при об./хв)</td>
-                        <td align="center">280/6000</td>
+                        <td >Потужність мотору(к.с при об./хв)</td>
+                        <td >280/6000</td>
                     </tr>
                     <tr>
-                        <td align="center">Крутний момент(Н*м при об./хв)</td>
-                        <td align="center">363/3200</td>
+                        <td >Крутний момент(Н*м при об./хв)</td>
+                        <td >363/3200</td>
                     </tr>
                     <tr>
-                        <td align="center">Макс. швидкість</td>
-                        <td align="center">248 км/год</td>
+                        <td >Макс. швидкість</td>
+                        <td >248 км/год</td>
                     </tr>
                     <tr>
-                        <td align="center">Вага</td>
-                        <td align="center">1270 кілограм</td>
+                        <td >Вага</td>
+                        <td >1270 кілограм</td>
                     </tr>
                     <tr>
-                        <td align="center">Розгін від 0 до 100</td>
-                        <td align="center">5.3 секунди</td>
+                        <td >Розгін від 0 до 100</td>
+                        <td >5.3 секунди</td>
                     </tr>
                     <tr>
-                        <td align="center">об’єм двигуна</td>
-                        <td align = "center">2192 см3</td>
+                        <td>Об’єм двигуна</td>
+                        <td>2192 см3</td>
                     </tr>
                 </table>
                 <p>По своїй суті Subaru 22B є модифікована Subaru Impreza WRX STi. Сама Impreza не мала кузову купе та якшо порівнювати ці два автомобіля в керованості, то 22B має на голову кращі ходові характеристики ніж 'цивільна' версія цього автомобілю</p>
@@ -59,8 +67,8 @@
             <article id="price">
                 <h2>Особливості та ціна</h2>
                 <p>
-                    Особливість цього екземпляру в тому, що він є одним із трьох автомобілів екстра партії 22B з номером №000/400. Subaru подарували їх в знак подяки за багаторічне партнерство та спортивні досягнення технічному директору команди Девіду Лапворту, штурману Нікі Ґрісту та пілоту Коліну Макрею.
-                    Одного разу в телевізійному інтерв’ю Колін сказав про 22B, що це одна з його улюблених машин, водночас визнаючи, що «вона може змусити похвилюватися» через свій характер. І можна лише уявити як їде ця машина, враховуючи, що Коліну було з чим порівняти.
+                    Особливість цього екземпляру в тому, що він є одним із трьох автомобілів екстра партії 22B з номером №000/400. Subaru подарували їх в знак подяки за багаторічне партнерство та спортивні досягнення технічному директору команди Девіду Лапворту, штурману Нікі Ґрісту та пілоту Коліну Макрею.<br>
+                    Одного разу в телевізійному інтерв’ю Колін сказав про 22B, що це одна з його улюблених машин, водночас визнаючи, що «вона може змусити похвилюватися» через свій характер. І можна лише уявити як їде ця машина, враховуючи, що Коліну було з чим порівняти.<br>
                     Цей екземпляр, з пробігом 12 тис кілометрів було продано за 480 500 фунтів стерлінгів, приблизно 582 тис доларів.
                     З огляду на стале зростання цін на колекційні автомобілі JDM, це безперечно бажаний автомобіль для будь-якої колекції. Доречі, подеякують, що одна така машина є в колекції в <a href = "https://auto.bigmir.net/ua/autonews/autoworld/6944294-v-ukraine-zasvetilas-redkaya-subaru-impreza-22b-sti-za-dollar-300-000">Україні</a>.
                 </p>
