--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <body>
     <div class = "register">
         <h1>Register</h1>
+        <ul class="nav"><a href="index.html">На головну</a></ul>
         <p>Будь ласка, заповніть таблицю щоб зареєструватися</p>
         <hr>
         <label for = "email"><b>Email</b></label>
