--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head >
         <meta charset="utf-8">
         <style>
+            html{    font-family:'Courier New', Courier, monospace ;}
             h2{text-align: center}
             p{ text-indent: 10 px; margin-left: 1% ; margin-right: 3%;}
             td{text-align: center}
@@ -12,15 +13,20 @@
             aside[a]{text-align: center; padding-left: 10px ; padding-right: 10px;}
             section.techSpec{padding-top: 30px;}         
             p{padding-left: 12%;padding-right: 12%;}   
+            ul{position:fixed;}
             p.about{padding-left: 0%; padding-right: 0%;}
+            .sub{margin-top: 30px;}
+            .nav1{margin: 10px; }
+            ul{text-align: center;background-color: rgb(25, 51, 71);}
         </style>
         <title>
            Subaru 22B 
         </title>
-        <aside>
-            <ul><a href="#history">Історія</a> <a href="#spec">Характеристики   </a> <a href="#price">Ціна</a> <a href="register.html">Реєстраціє</a><a href="help.html">Підтримка</a></ul>
-        </aside>
-        <h1 align = center>Автомобль  Subaru B22 Colin McRae</h1>
+        <nav>
+            <ul><a href="#history" class="nav1">Історія</a>  <a href="#price" class="nav1">Ціна</a> <a href="register.html" class="=nav1">Реєстраціє</a><a href="help.html" class="nav1" >Підтримка</a></ul>
+        </nav>
+        <hr>
+        <h1 align = center class="sub">Автомобль  Subaru B22 Colin McRae</h1>
         
     </head>
     <body>    
@@ -34,6 +40,7 @@
         </section>
         <section class="techSpec"> 
             <article id="spec">
+                <hr>
                 <h2 align = "center">Технічні характеристики</h2>
                 <h3 id = "M1" align="center">Двигун EJ22</h3>
                 <p ><img src="images.jpg" align = "left", border = "2" hspace="10" vspace="5">Двигун був не просто стандартним 2-літровим, розточеним до 2,2-літра, EJ22 був побудований на основі блоку окремого лиття. На додаток до двигуна EJ22, 22B міг похвалитися зварними швами кузова (за технологією автомобілів WRC), спеціальною головною передачею, дводисковим гоночним зчепленням, посиленими приводними та карданним валом, регульованим переднім та заднім диференціалом і посиленими гальмами. У підвісці використовувалися унікальні ковані алюмінієві важелі та тяги, спортивні перевернуті амортизатори Bilstein і пружини Eibach та 17-дюймові диски BBS золотистого кольору.</p>
