--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="regcss.css">    
     </head>
     <body>
+    <div class="bgcolor"></div>
     <div class = "register">
         <h1>Register</h1>
         <ul class="nav"><a href="index.html">На головну</a></ul>
