--- a/index.html
+++ b/index.html
@@ -2,43 +2,93 @@
 <html>
     <head >
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="index.css">
+        <title>
+           Subaru 22B 
+        </title>
+        <hr>
+        <h1 >Автомобль  Subaru B22 Colin McRae</h1>
+        
+    </head>
+    <body>
+        <div class="ahis">
+            <div class="nav">
+                <a href="#history" clas="ahis">Історія</a>
+            </div>
+            <div class="nav">
+                <a href="#price" >Ціна</a>
+            </div>
+            <div class="nav">
+                <a href="register.html" >Реєстрація</a>        
+            </div>
+            <div class="nav">
+                <a href="help.html"  >Підтримка</a>
+            </div>
+        </div>
+        <meta charset="utf-8">
         <style>
+            h1{text-align: center;}
+            hr{width: 100%;}
             html{    font-family:'Courier New', Courier, monospace ;}
             h2{text-align: center}
             p{ text-indent: 10 px; margin-left: 1% ; margin-right: 3%;}
             td{text-align: center}
-            a{text-decoration: 0 ; color: coral;}
+            a{text-decoration: 0 ; color: rgb(179, 149, 138);}
             tr{background-color: rgb(205, 238, 145); border-color: grey; }
             aside{ text-align: center;}
             aside[a]{text-align: center; padding-left: 10px ; padding-right: 10px;}
             section.techSpec{padding-top: 30px;}         
-            p{padding-left: 12%;padding-right: 12%;}   
+            p{padding-left: 12%;padding-rights: 12%;}   
             ul{position:fixed;}
             p.about{padding-left: 0%; padding-right: 0%;}
             .sub{margin-top: 30px;}
-            .nav1{margin: 10px; }
+            .ahis
+            {
+                position: fixed;
+                z-index: 100;
+                float: left;
+                width: 19%;
+            }
+            .container{
+                margin-left: 10%;
+            }
+            .nav{
+                width: 100%;
+                padding: 10px;
+                background-color: rgb(58, 105, 186);
+                margin: 10px;
+                border-radius: 10px;
+                text-align: center;
+            }
             ul{text-align: center;background-color: rgb(25, 51, 71);}
+            @media screen and (max-width: 800px) {
+            .ahis,.container 
+                {
+                    width: 100%;
+                };
+            .nav{
+                width: 300px;
+                }
+            .ahis{
+                position: relative;
+            }
+            .container{
+                margin-left: 0%;
+            }
+            }
         </style>
         <title>
            Subaru 22B 
-        </title>
-        <nav>
-            <ul><a href="#history" class="nav1">Історія</a>  <a href="#price" class="nav1">Ціна</a> <a href="register.html" class="=nav1">Реєстраціє</a><a href="help.html" class="nav1" >Підтримка</a></ul>
-        </nav>
-        <hr>
-        <h1 align = center class="sub">Автомобль  Subaru B22 Colin McRae</h1>
-        
-    </head>
-    <body>    
-        <section>
+        </title>    
+        <section class="container">
             <article id="history">
                 <h2>Походження назви та історія</h2>
-                <p ><img src="1 Subaru Impreza STi.jpg" style="width: 50%;" align = "left" hspace="10" vspace="5" border = "2" border-color="">версії 22B походить від назви генерального спонсора гоночної команди Subaru World Rally Team на той час - табачного бренда State Express 555.   П'ятсот п'ятдесят п'ять - це 22B у шістнадцятковій системі числення, яка використовується в комп'ютерному програмуванні. У той час світ ІТ переживав бум, і Impreza була культовою машиною для успішних ІТ-спеціалістів як у Великобританії, так і в Японії. Часом назву 22В трактують як об’єм двигуна, який було збільшено з 2 до 2,2 л, а хтось вважає, що B в назві означає Bilstein, постачальника амортизаторів. Але хто б як не трактував назву версії,  Subaru створили справді фантастичну машину.</p>
+                <p ><img src="1 Subaru Impreza STi.jpg" style="width: 50%;" align = "left" hspace="10" vspace="5" border = "2" >версії 22B походить від назви генерального спонсора гоночної команди Subaru World Rally Team на той час - табачного бренда State Express 555.   П'ятсот п'ятдесят п'ять - це 22B у шістнадцятковій системі числення, яка використовується в комп'ютерному програмуванні. У той час світ ІТ переживав бум, і Impreza була культовою машиною для успішних ІТ-спеціалістів як у Великобританії, так і в Японії. Часом назву 22В трактують як об’єм двигуна, який було збільшено з 2 до 2,2 л, а хтось вважає, що B в назві означає Bilstein, постачальника амортизаторів. Але хто б як не трактував назву версії,  Subaru створили справді фантастичну машину.</p>
                 <p>Створений для святкування 40-річчя марки та для відзнаки третього поспіль титулу WRC серед виробників, STi 22B був представлений як серійна версія вже культового дводверного автомобіля Subaru World Rally Car. З широкими передніми та задніми арками, високим заднім спойлером і унікальним двигуном <a href="#M1">EJ22</a>, STi 22B був настільки наближений до ралійного автомобіля Коліна МакРея, наскільки можливо було зробити. Це була справжня дорожня репліка ралійного боліда.</p>
                 <p>Для продажу на внутрішньому ринку Японії було вироблено 399 одиниць 22B, ще 25 було виготовлено для закордонних ринків. Всі вони були продані протягом 48 годин за попередніми замовленнями. Вартість на той час була трохи менша за 40 тис фунтів стерлінгів або 25 тис доларів.</p>           
             </article>        
         </section>
-        <section class="techSpec"> 
+        <section class="container"> 
             <article id="spec">
                 <hr>
                 <h2 align = "center">Технічні характеристики</h2>
