--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     <style>
         h1 {
             text-align: center;
-            background-color: blueviolet;
+            background-color: rgb(141, 198, 43);
             border-radius: 15px;
+            padding: 10px;
         }
 
         hr {
@@ -91,10 +92,6 @@
             position: fixed;
         }
 
-        p.about {
-            padding-left: 0%;
-            padding-right: 0%;
-        }
 
         .sub {
             margin-top: 30px;
@@ -124,13 +121,23 @@
             margin-bottom: 5px;
             background-color: rgb(27, 145, 106);
             padding: 10px;
+            color:black;
             
+        }
+
+        .nav[a]{
+            color: black;
         }
 
         .history {
             background-color: #e02142;
             border-radius: 100px;
             padding-bottom: 10px;
+            padding-top: 10px;
+        }
+
+        img {
+            border-radius: 10px;
         }
 
         ul {
@@ -171,9 +178,6 @@
                 background-color: white;
             }
 
-            .container {
-             
-            }
         }
     </style>
     <title>
@@ -182,7 +186,7 @@
     <section class="container">
         <article id="history" class="history">
             <h2>Походження назви та історія</h2>
-            <p><img src="1 Subaru Impreza STi.jpg" style="width: 50%;" align="left" hspace="10" vspace="5"
+            <p><img src="1 Subaru Impreza STi.jpg" style="width: 60%;" align="left" hspace="10" vspace="5" >
                     border="2">версії 22B походить від назви генерального спонсора гоночної команди Subaru World Rally
                 Team на той час - табачного бренда State Express 555. П'ятсот п'ятдесят п'ять - це 22B у шістнадцятковій
                 системі числення, яка використовується в комп'ютерному програмуванні. У той час світ ІТ переживав бум, і
@@ -202,7 +206,7 @@
         <article id="spec" class="spec">
             <h2 align="center">Технічні характеристики</h2>
             <h3 id="M1" align="center">Двигун EJ22</h3>
-            <p><img src="images.jpg" align="left" , border="2" hspace="10" vspace="5">Двигун був не просто стандартним
+            <p><img src="images.jpg" align="left" , border="2" hspace="10" vspace="5" width="50%">Двигун був не просто стандартним
                 2-літровим, розточеним до 2,2-літра, EJ22 був побудований на основі блоку окремого лиття. На додаток до
                 двигуна EJ22, 22B міг похвалитися зварними швами кузова (за технологією автомобілів WRC), спеціальною
                 головною передачею, дводисковим гоночним зчепленням, посиленими приводними та карданним валом,
